# neon-serde

./: .gitignore  Cargo.toml  package.json  readme.md
.github/workflows/: ci.yml
src/: dates.rs  de.rs  errors.rs  lib.rs  macros.rs  ser.rs
test/: package.json
test/__tests__/: get_values.js
test/native/: Cargo.toml
test_macro/: package.json
test_macro/__tests__/: macros.js
test_macro/native/: Cargo.toml
test_macro/native/src/: lib.rs
tests/: package.json
tests/__tests__/: get_values.js
tests/native/: Cargo.toml
tests/native/src/: lib.rs
