[package]
name = "neon-serde2"
version = "0.8.0"
authors = [
    "Damir Jelić <poljar@termina.org.uk>",
    "Gabriel Castro <dev@GabrielCastro.ca>"
]
description = "Easily serialize object for use with neon, fork of neon-serde"
license = "MIT"
repository = "https://github.com/matrix-org/neon-serde"
readme = "readme.md"
edition = "2021"

[lib]
name = "neon_serde"

[dependencies]
serde = "1.0"
thiserror = "1.0.40"
num = { version = "0.4.0", default-features = false }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["test_macro/native", "tests/native"]