[package]
name = "neon-serde2"
version = "0.8.0"
authors = [
    "Damir Jelić <poljar@termina.org.uk>",
    "Gabriel Castro <dev@GabrielCastro.ca>",
    "Muhammad Hamza <mhamza@formbird.com>"
]
description = "Easily serialize object for use with neon"
license = "MIT"
repository = "https://github.com/formbird/neon-serde"
readme = "readme.md"
edition = "2021"

[lib]
name = "neon_serde"

[dependencies]
serde = "1.0"
thiserror = "1.0.40"
num = { version = "0.4.0", default-features = false }
chrono = { version = "0.4.24", features = ["serde"], optional = true }

[dependencies.neon]
version = "1.0.0-alpha.2"
default-features = false
features = ["napi-6", "try-catch-api", "event-queue-api"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"

[features]
dates = ["dep:chrono"]

[workspace]
members = ["tests/native"]
