[package]
name = "tests"
version = "0.1.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
license = "MIT"
publish = false
edition = "2021"

[lib]
name = "test"
crate-type = ["dylib"]

[dependencies]
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
neon-serde = { path = "../..", package = "neon-serde2", features = ["dates"] }
serde_bytes = "0.11.9"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
